@@ -31,6 +31,7 @@ Mantis ChangeLog
 - 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
 - 0002220: [installation] usage of consistent naming schema for images (vboctor)
 - 0004163: [other] Unreadable error messages in some languages (vboctor)
+- 0004222: [sql] Should mantis_project_category_table.user_id be UNSIGNED? (vboctor)
 - New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
 - New Config: show_realname (default OFF) - show realname in all places instead of username (thraxisp)
 - Updated German, French, Brazilian Portuguese, japanese_euc, japanese_sjis, Korean, Russian and japanese_utf8 language.
